# pw-task

./: .gitignore  .prettierignore  CLAUDE.md  CLAUDE.template.md  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.js  สิ่งที่ต้องทำเพิ่ม.md
.github/workflows/: ci.yml  release.yml
docs/: agent-system-design.md  e2e-testing.md  regression-checklist.md  test-system-design.md  testing.md  ui-audit-pro.md  ui-redesign-plan.md
outputs/: dashboard.html  tasks.template.json
outputs/backup-pre-redesign/: detail.ts  index.html  main.ts  render.ts  styles.css
outputs/mockups/: a-linear.html  b-things3.html  c-multiview.html  components-preview.html  d-mission-control.html  index.html
outputs/sample-data/: welcome-tutorial.json
scripts/: run-cargo.mjs  run-tauri.mjs  run-tests.ps1  setup-tasks.mjs
src/: bindings.ts  index.html  logger.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  domain.rs  lib.rs  main.rs  patch.rs  tree.rs
src-tauri/src/agents/: legacy.rs  mod.rs  registry.rs  routing.rs
src-tauri/tests/: agents_integration.rs  commands_integration.rs  db_integration.rs  domain_tree_integration.rs  patch_integration.rs
src/__tests__/: agents.test.ts  data.test.ts  migration-v1_0-to-v1_1.test.ts  migrations.test.ts  patch-system.test.ts
src/js/: ai.ts  api.ts  board.ts  data-rs.ts  data.ts  detail.ts  dom.ts  fileops.ts  main.ts  (+10 more)
tests/: backward-compat.test.js  patch-merger.test.js  review-rerun-flow.test.js  task-state.test.js
(+37 files in other folders)
