[package]
name = "ai-task-flow"
version = "0.1.0"
description = "AI Task Flow Desktop App"
authors = []
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"
specta = { version = "2.0.0-rc", features = ["serde_json"] }
specta-typescript = "0.0.7"
tauri-specta = { version = "2.0.0-rc", features = ["derive", "typescript"] }
once_cell = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
